--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-promise-router": "^4.1.0",
+    "express-validator": "^6.11.1",
     "jshint": "^2.13.0",
     "morgan": "^1.10.0"
   },
