--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/dygwon/cs493-portfolio#readme",
   "dependencies": {
+    "@google-cloud/datastore": "^6.4.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
