--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "dependencies": {
     "@google-cloud/datastore": "^6.4.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "express-promise-router": "^4.1.0",
+    "express-session": "^1.17.2",
     "express-validator": "^6.11.1",
     "jshint": "^2.13.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.4.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
