--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/dygwon/cs493-portfolio#readme",
   "dependencies": {
     "@google-cloud/datastore": "^6.4.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
